# python-competitive-programming

./: .gitignore  pyproject.toml
solutions/: chocolate.py  common_prime_divisors.py  fib_frog.py  ladder.py  min_max_division.py
tests/: test_chocolate.py  test_common_prime_divisors.py  test_fib_frog.py  test_ladder.py  test_min_max_division.py  test_solution.py
